[package]
name = "integral_square_root"
version = "0.0.1"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]
description = "Square root (returned as f64) for integral types"

repository = "https://github.com/Techern/IntegralSquareRoot-RS"
readme = "README.md"
keywords = ["square", "root", "sqrt"]
license = "MIT"